# big-data-and-data-science

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
datasets/: consumer-climate-index-raw.tsv  consumer-climate-index.csv  demand-forecasting-raw.feather  demand-forecasting.csv  demand-forecasting.feather  nutritional-trends-index.csv
datasets/demos/: air-passengers.csv  outages.csv  rental-prices.csv  taxi-passengers.csv  transactions.csv
datasets/exercises/: backorders.csv  customer-churn.csv  exam-performance.csv  intrusion-detection.csv  store-sales.csv
datasets/prediction-challenge/: dataset.csv  prediction-dataset.csv
labs/: demand-forecasting-solution.ipynb  demand-forecasting.ipynb
models/: demand-forecasting.skops
notebooks/: anomaly-detection.ipynb  data-generation.ipynb  decision-tree-learning.ipynb  demand-forecasting.ipynb  linear-models.ipynb  machine-learning-fundamentals.ipynb  support-vector-machines.ipynb  utils.py
notebooks/demos/: airline-passengers-stl.ipynb  exam-performance-logistic-regression.ipynb  outage-decision-tree-learning.ipynb  rental-prices-multiple-linear-regression.ipynb  rental-prices-polynomial-regression.ipynb  rental-prices-single-linear-regression.ipynb  taxi-passengers-low-pass-filter.ipynb  transactions-lof.ipynb
notebooks/development-exercises/: backorder-random-forest.ipynb  churn-support-vector-machine.ipynb  (+3 more)
slides/: document.tex
streamlit/: classification-metrics.py  demand-forecasting.py  requirements.txt  scale-invariance-demonstration.py
(+66 files in other folders)
