[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">= 3.12, < 3.13"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
plotly = "^5.24.0"
holidays = "^0.56"
pyarrow = "^17.0.0"
feature-engine = "^1.8.1"
imbalanced-learn = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
