[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">= 3.12, < 3.13"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
plotly = "^5.24.0"
holidays = "^0.56"
pyarrow = "^17.0.0"
feature-engine = "^1.8.1"
imbalanced-learn = "^0.12.3"
pyampute = "^0.0.3"
tabulate = "^0.9.0"
jupyter-cache = "^1.0.0"
streamlit = "^1.40.0"
watchdog = "^5.0.3"
jax = "^0.4.34"
scikit-survival = "^0.23.0"
mimesis = "^18.0.0"
ipyleaflet = "^0.19.2"
requests = "^2.32.3"
skops = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
